--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile Management App</title>
+    <!-- 👇 Important for React Router: ensures correct routing after refresh -->
+    <base href="/" />
   </head>
   <body>
     <div id="root"></div>
+    <!-- 👇 Entry point must match src/main.tsx -->
     <script type="module" src="src/main.tsx"></script>
   </body>
 </html>
